# fastapi_app_template

./: README.md  dir.txt  pyproject.toml
.github/workflows/: deploy-fastapi.yaml
backend/app/: main.py
